<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drifter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string-array name="Drifter_names">
        <item >Drifter #1</item>
        <item >Drifter #2</item>
        <item >Drifter #3</item>
        <item >Drifter #4</item>
        <item >Drifter #5</item>
        <item >Drifter #6</item>
        <item >Drifter #7</item>
        <item >Drifter #8</item>
        <item >Drifter #9</item>
        <item >Drifter #10</item>
        <item >Drifter #11</item>
        <item >Drifter #12</item>
        <item >Drifter #13</item>
        <item >Drifter #14</item>
        <item >Drifter #15</item>
        <item >Drifter #16</item>
        <item >Drifter #17</item>
        <item >Drifter #18</item>
        <item >Drifter #19</item>
        <item >Drifter #20</item>
    </string-array>
    <string name="Default_val">5000</string>
    <string name="Namesfor_drift">Names for Drifter</string>
    <string name="Cancel">Cancel</string>
    <string name="Intervals">Update intervals in miliseconds</string>
    <string name="accept_conf">Accept Configueration</string>
    <string name="Drifttextname">Not Yet Set</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="textfor_driftname">Welcome          </string>
    <string name="textfor_driftname2">The Water Drifter Project,</string>
    <string name="textfor_driftname3">I am</string>
    <string name="Bluetooth_button">Tap to add Bluetooth</string>

</resources>
