<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    tools:context="${packageName}.${activityClass}" 
    android:background="#BBD9EE" >

    <TextView
        android:id="@+id/driftnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/Intervals" 
        android:textColor="#336699"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/inputfor_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driftnametext"
        android:layout_below="@+id/driftnametext"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/Default_val"
        android:textColor="#336699"
        android:textSize="26sp" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="38dp"
        android:text="@string/Namesfor_drift"
        android:textColor="#336699"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerDrifter"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_above="@+id/driftnametext"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:entries="@array/Drifter_names" />

    <Button
        android:id="@+id/btnOnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputfor_interval"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOnConfig"
        android:layout_alignBottom="@+id/btnOnConfig"
        android:layout_alignRight="@+id/spinnerDrifter"
        android:layout_marginRight="17dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Bluetooth_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/spinnerDrifter"
        android:layout_below="@+id/inputfor_interval"
        android:layout_marginTop="26dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Bluetooth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Bluetooth_id"
        android:layout_alignBottom="@+id/Bluetooth_id"
        android:layout_alignLeft="@+id/inputfor_interval"
        android:text="@string/Bluetooth_button"
        android:textColor="#336699"
        android:textSize="22sp" />

</RelativeLayout>