<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}"
    android:background="#BBD9EE" >

    <Button
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="31dp"
        android:layout_marginRight="44dp"
        />

    <Button
        android:id="@+id/configbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/messageButton"
        android:layout_alignBottom="@+id/messageButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="42dp"
         />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/messageButton"
        android:text="@string/textfor_driftname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="500dp"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="14dp"
        android:contentDescription="Main Photo for Drifter"
        android:src="@drawable/drifter" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/configbutton"
        android:layout_centerVertical="true"
        android:text="Latitude:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/Bluetooth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/messageButton"
        android:layout_centerVertical="true"
        android:text="Longitude:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/longtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="latitude"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/lattext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longtext"
        android:layout_alignBottom="@+id/longtext"
        android:layout_toRightOf="@+id/TextView01"
        android:text="longitude"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/driftnametext"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/imageView1"
        android:layout_alignRight="@+id/lattext"
        android:text="@string/Drifttextname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/configbutton"
        android:layout_below="@+id/TextView01"
        android:text="@string/textfor_driftname3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="26sp" />

</RelativeLayout>